fix: adjust padding in ion-select for better alignment

--- a/IoweU/src/app/pages/create-expense/create-expense.page.scss
+++ b/IoweU/src/app/pages/create-expense/create-expense.page.scss
@@ -195,7 +195,7 @@ ion-select {
   right: auto;
   display: flex;
   align-items: center;
-  padding: 20px 10px;
+  padding: 14px 10px;
   background: rgba(255, 255, 255, 0.6); /* White with 80% opacity */
   backdrop-filter: saturate(180%) blur(20px);
   -webkit-backdrop-filter: saturate(180%) blur(20px);
